la prueba en la rama de maik

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <h1> esto es una prueba de repaso </h1>
 <body>
+
+    <p><br> ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis debitis ducimus voluptates consequuntur temporibus distinctio cupiditate praesentium placeat voluptatem, delectus unde perspiciatis dolor itaque excepturi quidem eos consequatur deleniti.</p>
+    <h2>maquetacion 
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos impedit voluptatem est ipsam quas totam nihil. Iusto itaque doloremque, deserunt ipsa maxime nihil. Distinctio fuga, autem incidunt eligendi nulla eaque!</p>
     
+    </h2>
 </body>
 </html>
